--- a/Webserver/Pages/Index.razor
+++ b/Webserver/Pages/Index.razor
@@ -1,9 +1,98 @@
 ﻿@page "/"
+@using Webserver.Data
+@inject Webserver.Services.IWeatherService weatherService
 
 <PageTitle>Index</PageTitle>
+<!--
 
-<h1>Hello, world!</h1>
+<div class="row">
+    <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-4">
+                <label> Name :</label>
+            </div>
+            <div class="col-md-8">
+                <input @bind="Temperature" style="width:100%;" placeholder="Temperature" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <label> Name :</label>
+            </div>
+            <div class="col-md-8">
+                <input @bind="Humidity" style="width:100%;" placeholder="Humidity" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-8">
+                <button class="btn btn-primary" @onclick="(e => Save())"> Save </button>
+                <button class="btn btn-danger" @onclick="(e => Reset())" style="float:right;"> Reset </button>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Weather Id</th>
+                    <th>Timestamp</th>
+                    <th>Temperature</th>
+                    <th>Humidity</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @if (Weather.Count > 0) {
+                    @foreach (var w in Weather)
+                    {
+                        <tr>
+                            <td>w.Id</td>
+                            <td>w.Timestamp</td>
+                            <td>w.Temperature</td>
+                            <td>w.Humidity</td>
+                            <td>
+                                <button class="btn btn-primary" @onclick="(e => Edit(w.Id))">Edit</button>
+                                <button class="btn btn-danger" @onclick="(e => Delete(w.Id))">Delete</button>
+                            </td>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
-Welcome to your new app.
+-->
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code{
+    Weather WeatherPoint = new Weather();
+    List<Weather> Weather = new List<Weather>();
+
+    protected override async Task OnInitializedAsync() {
+        GetWeather();
+    }
+
+    private void GetWeather() {
+        Weather = weatherService.GetWeather();
+    }
+
+    private void Save() {
+        weatherService.SaveOrUpdate(WeatherPoint);
+        Reset();
+        GetWeather();
+    }
+
+    private void Reset() {
+        WeatherPoint = new Weather();
+    }
+
+    private void Edit(string weatherId) {
+        WeatherPoint = weatherService.GetWeatherPoint(weatherId);
+    }
+
+    private void Delete(string waetherId) {
+        weatherService.Delete(waetherId);
+        GetWeather();
+    }
+}
